crates/runtime/tests/models/snapshots/integration_models__models__search__explicit_non_searchable_dataset_errors_error_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: err.to_string()
---
Request error: error sending request for url (http://127.0.0.1:56898/v1/search)
