crates/runtime/tests/models/snapshots/integration_models__models__search__hf_basic_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response(resp, round_scores)"
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.99",
      "data": {
        "i_color": "smoke",
        "i_item_id": "AAAAAAAADBAAAAAA"
      },
      "dataset": "item",
      "matches": {
        "i_item_desc": [
          "Patient"
        ]
      },
      "primary_key": {
        "i_item_sk": 19
      }
    },
    {
      "_score": "0.98",
      "data": {
        "i_color": "spring",
        "i_item_id": "AAAAAAAAHAAAAAAA"
      },
      "dataset": "item",
      "matches": {
        "i_item_desc": [
          "New"
        ]
      },
      "primary_key": {
        "i_item_sk": 7
      }
    }
  ]
}
