crates/runtime/tests/models/snapshots/integration_models__models__search__hf_chunking_with_extra_column_no_pk2_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response(resp, round_scores)"
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.94",
      "data": {
        "cp_catalog_page_sk": 1,
        "cp_department": "DEPARTMENT",
        "cp_description": "In general basic characters welcome. Clearly lively friends conv"
      },
      "dataset": "catalog_page_with_chunking_no_pk",
      "matches": {
        "cp_description": [
          "In general basic characters welcome. Clearly lively friends conv"
        ]
      }
    }
  ]
}
