crates/runtime/tests/models/snapshots/integration_models__models__search__hf_chunking_with_extra_columns2_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(response)
snapshot_kind: text
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "data": {
        "cp_department": "DEPARTMENT",
        "cp_description": "In general basic characters welcome. Clearly lively friends conv"
      },
      "dataset": "catalog_page_with_chunking",
      "matches": {
        "cp_description": [
          "In general basic characters welcome. Clearly lively friends con"
        ]
      },
      "primary_key": {
        "cp_catalog_page_sk": 1
      },
      "_score": "0.94"
    }
  ]
}
